--- a/styles/style.css
+++ b/styles/style.css
@@ -150,6 +150,19 @@ div.loading {
     bottom: 0%;
 
     background-color: #000000AA;
+
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
+
+    p {
+        margin: auto;
+        position: absolute;
+
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+    } 
 }
 
 canvas {
