Three.js rendering test

--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -57,7 +57,7 @@ button.menu {
 }
 
 button:hover {
-    filter: brightness(1.5);
+    filter: brightness(1.25);
 }
 
 button:active {
@@ -141,6 +141,9 @@ canvas {
     background-color: #000000;
 
     border-radius: var(--glob-border-radius);
+
+    image-rendering: pixelated;
+    /* image-rendering: crisp-edges; */
 }
 
 canvas.center {
@@ -155,4 +158,8 @@ canvas.center {
 
     width: var(--canvas-css-width);
     max-height: 80%;
+}
+
+img.icon {
+    filter: saturate(0);
 }
