--- a/styles/site-style.css
+++ b/styles/site-style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     font-weight: normal;
 }
 
@@ -11,7 +11,6 @@ h1 {
 
 h3 {
     font-size: 25px;
-
 }
 
 h2 {
