--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
     --toolbar-height: 20px;
 
     --background-color: #202020;
-    --accent-color: #2A2A2A;
+    --accent-color: #2a2a2a;
     --tertiary-color: #303030;
 }
 
@@ -82,14 +82,11 @@ div.left {
     left: var(--glob-padding);
     top: calc(var(--glob-padding) * 2 + var(--toolbar-height) * 2);
 
-
     --width: calc(
         50% + (var(--glob-padding) * 4) + (var(--canvas-css-width) / 2)
     );
 
-    --height: calc(
-        100% - var(--glob-padding) * 5 - var(--toolbar-height) * 2
-    );
+    --height: calc(100% - var(--glob-padding) * 5 - var(--toolbar-height) * 2);
 
     right: var(--width);
     height: var(--height);
@@ -101,14 +98,11 @@ div.right {
     right: calc(var(--glob-padding) * 3);
     top: calc(var(--glob-padding) * 2 + var(--toolbar-height) * 2);
 
-
     --width: calc(
         50% + (var(--glob-padding) * 2) + (var(--canvas-css-width) / 2)
     );
 
-    --height: calc(
-        100% - var(--glob-padding) * 5 - var(--toolbar-height) * 2
-    );
+    --height: calc(100% - var(--glob-padding) * 5 - var(--toolbar-height) * 2);
 
     left: var(--width);
     height: var(--height);
@@ -129,7 +123,9 @@ div.dropdown-content {
     border-radius: var(--glob-border-radius);
 }
 
-div.dropdown:hover div.dropdown-content {display: block;}
+div.dropdown:hover div.dropdown-content {
+    display: block;
+}
 
 div.toolbar {
     display: block;
@@ -149,10 +145,10 @@ div.loading {
     top: 0%;
     bottom: 0%;
 
-    background-color: #000000AA;
+    background-color: #000000aa;
 
     font-size: 50px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
 
     p {
         margin: auto;
@@ -162,7 +158,7 @@ div.loading {
         left: 50%;
 
         transform: translate(-50%, -50%);
-    } 
+    }
 }
 
 canvas {
